added page title and contact info

--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="en">
+<head>
+  <title> Annie's website </title>
+  <meta charset="utf-8">
+  <meta name="description" content="Annie Jennemann's wesbite for J7502.">
+  <meta name="author" content="Annie Jennemann">
+  <meta name="keywords" content="Annie Jennemann, 7502"/>
+</head>
 
 <body>
 
-<h1>Annie's homepage</h1>
+<h1>Annie's webstite</h1>
+<p>You can reach me at ajj69k@mail.missouri.edu</p>
+
 
 </body>
 
