Added image, email link and second page

--- a/index.html
+++ b/index.html
@@ -10,10 +10,25 @@
 </head>
 
 <body>
+  <nav>
+    <ul>
+      <li><a href="https://www.columbiamissourian.com/" target="_blank">The Columbia Missourian</a></li>
+      <li><a href="secondpage.html">Annie's second page</a></li>
+    </ul>
+  </nav>
 
-<h1>Annie's webstite</h1>
-<p>You can reach me at ajj69k@mail.missouri.edu</p>
+<h1>Annie Jennemann's website</h1>
+<p>You can reach me at <a href="mailto:ajj69k@mail.missouri.edu">ajj69k@mail.missouri.edu</a></p>
 
+<a href="mailto:ajj69k@mail.missouri.edu">
+  <img src="annieimage.jpg" alt="Annie Jennemann" />
+</a>
+
+<section>
+  <h2>Joke</h2>
+  <p></p>
+  <p></p>
+</section>
 
 </body>
 
