--- a/index.html
+++ b/index.html
@@ -10,25 +10,29 @@
 </head>
 
 <body>
-  <nav>
-    <ul>
-      <li><a href="https://www.columbiamissourian.com/" target="_blank">The Columbia Missourian</a></li>
-      <li><a href="secondpage.html">Annie's second page</a></li>
-    </ul>
-  </nav>
 
 <h1>Annie Jennemann's website</h1>
 <p>You can reach me at <a href="mailto:ajj69k@mail.missouri.edu">ajj69k@mail.missouri.edu</a></p>
 
 <a href="mailto:ajj69k@mail.missouri.edu">
-  <img src="annieimage.jpg" alt="Annie Jennemann" />
+  <img src="myphoto.jpeg" alt="Annie Jennemann" />
 </a>
 
 <section>
   <h2>Joke</h2>
-  <p></p>
-  <p></p>
+  <p>I heard about this book recently about Schrodinger's cat and Pavlov's dog teaming up for an action adventure. I asked a librarian if she had heard of it.</p>
+  <p>The librarian said, "That book rings a bell, but I'm not sure if it's in the library or not."</p>
 </section>
+
+<h2>Links</h2>
+
+<nav>
+  <ul>
+    <li><a href="https://www.columbiamissourian.com/" target="_blank">The Columbia Missourian</a></li>
+    <li><a href="secondpage.html">Annie's second page</a></li>
+    <li><a href="http://anniejennemann.com/work/">Link to Annie's portfolio</a></li>
+  </ul>
+</nav>
 
 </body>
 
