added shortwave link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <nav>
   <ul>
-      <li><a href="https://www.columbiamissourian.com/" target="_blank">The Columbia Missourian</a></li>
+      <li><a href="https://shortwave.coffee/" target="_blank">Shortwave Coffee</a></li>
       <li><a href="secondpage.html">Annie's second page</a></li>
       <li><a href="http://anniejennemann.com/work/">Link to Annie's portfolio</a></li>
   </ul>
