--- a/old-index.html
+++ b/old-index.html
@@ -4,13 +4,9 @@
 <head>
   <title> Annie's website </title>
   <meta charset="utf-8">
-  <meta name="description" content="Annie Jennemann's website for J7502.">
+  <meta name="description" content="Annie Jennemann's wesbite for J7502.">
   <meta name="author" content="Annie Jennemann">
   <meta name="keywords" content="Annie Jennemann, 7502"/>
-  <link href="<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital@0;1&family=Noto+Sans+TC:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="myStyles.css">
 </head>
 
 <body>
@@ -21,7 +17,6 @@
   <ul>
       <li><a href="https://shortwave.coffee/" target="_blank">Shortwave Coffee</a></li>
       <li><a href="secondpage.html">Annie's second page</a></li>
-      <li><a href="old-index.html">My old index</a></li>
       <li><a href="http://anniejennemann.com/work/">Link to Annie's portfolio</a></li>
   </ul>
 </nav>
