--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <meta name="keywords" content="Annie Jennemann, 7502"/>
   <link href="<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital@0;1&family=Noto+Sans+TC:wght@700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital@0;1&family=Lato:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="myStyles.css">
 </head>
 
