--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Annie Jennemann's website for J7502.">
   <meta name="author" content="Annie Jennemann">
   <meta name="keywords" content="Annie Jennemann, 7502"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital@0;1&family=Lato:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="myStyles.css">
 </head>
@@ -16,12 +17,13 @@
 <h2>Links</h2>
 
 <nav>
-  <ul>
+  <ul id="menu_nav">
       <li><a href="https://shortwave.coffee/" target="_blank">Shortwave Coffee</a></li>
       <li><a href="secondpage.html">Annie's second page</a></li>
       <li><a href="old-index.html">My old index</a></li>
       <li><a href="http://anniejennemann.com/work/">Link to Annie's portfolio</a></li>
   </ul>
+  <button id="menu_trigger">☰</button>
 </nav>
 
 <h1>Annie Jennemann's website</h1>
@@ -38,5 +40,7 @@
 </section>
 
 </body>
+
+<script src="main.js" type="text/javascript"></script>
 
 </html>
