fix spacing, change background color

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,20 +42,16 @@
   <h2> My work samples </h2>
 
     <img class="graphic" src="images/census_spread-01.png" alt="A graphic spread showing Boone County 2020 census data. The spread shows Boone County's population over a century, the top five growing counties in Missouri from 2010 to 2020, and population by race and ethnicity." />
-      <br></br>
+
         <p> Most recently, I worked with the other graphics editor at the Missourian to create this spread about 2020 census data in Boone County. </p>
         <p> Tool used: Adobe Illustrator </p>
         <a href="images/census_spread-01.png" download="Jennemann_Census">Download</a>
-      <br></br>
-      <br></br>
 
     <img class="graphic" src="images/Missouritimeline-01.png" alt="A timeline graphic showing the history of Missouri from 1250 to present day." />
-      <br></br>
+
         <p> In August, an editor for the Missourian asked me to create a timeline about the history of Missouri in honor of the state's bicentennial. I was given as much space as I needed in the print edition, which resulted in a double-truck timeline that was almost two full pages. I really enjoyed working on this graphic and getting a chance to use my design skills in such a big space. </p>
         <p> Tool used: Adobe Illustrator </p>
-        <a href="images/Missouritimeline-01.png" download="Jennemann_MissouriTimeline">Download</a>
-      <br></br>
-      <br></br>
+        <a class="download" href="images/Missouritimeline-01.png" download="Jennemann_MissouriTimeline">Download</a>
 
     <div class='tableauPlaceholder' id='viz1615412324536' style='position: relative'><noscript><a href='#'><img alt=' ' src='https://public.tableau.com/static/images/Mi/MissouriCountyCOVID-19casesandvaccinedistributiontoresidents/Dashboard1/1_rss.png' style='border: none'></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F'>
           <param name='embed_code_version' value='3'>
@@ -81,35 +77,29 @@
           scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
           vizElement.parentNode.insertBefore(scriptElement, vizElement);
           </script>
-      <br></br>
+
         <p> This is an example of data the other graphics editor and I analyzed for a story at the Missourian. We looked at COVID-19 vaccinations and case rates in each Missouri county. The story was about vaccine rollout in rural areas in Missouri. </p>
         <p> Tool used: Tableau Desktop </p>
-      <br></br>
-      <br></br>
 
     <img class="graphic" src="images/marijuana-01.png" alt="A graphics spread of data about marijuana and marijuana arrests in Missouri. The graphics show marijuana possession arrests by race, by age and sex, across the U.S. and how much marijuana in Missouri can lead to charges or arrests." />
-      <br></br>
+
         <p> This is a spread about marijuana-related arrests in Missouri that I created for my final project in the information graphics class at MU. It is a full-page and was published in the print edition of the Missourian Jan. 2021.</p>
         <p> Tool used: Adobe Illustrator </p>
         <a href="images/marijuana-01.png" download="Jennemann_MedicalMarijuana">Download</a>
-      <br></br>
-      <br></br>
 
     <img class="graphic" src="images/flu-01.png" alt="A map showing different locations in Boone County to get flu shots." />
-      <br></br>
+
         <p> This is a graphic I created in the fall of 2020 showing different locations in Boone County that people could receive flu shots. </p>
         <p> Tool used: Adobe Illustrator </p>
         <a href="images/flu-01.png" download="Jennemann_FluShots">Download</a>
-      <br></br>
-      <br></br>
+
 
     <img class="graphic" src="images/fall-01.png" alt="An illustration graphic showing different types of leaves in Missouri and what colors they change to in the fall." />
-      <br></br>
+
         <p> This was one of my first graphics published in the Missourian about the color of leaves changing color. I love working with illustrations and anything relating to nature. This was a really fun, yet informative, graphic. </p>
         <p> Tool used: Adobe Illustrator </p>
         <a href="images/fall-01.png" download="Jennemann_FallColors">Download</a>
-      <br></br>
-    <br></br>
+
 
 </div>
 
