--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="navbar">
   <nav>
     <ul id="menu_nav">
-        <li><a href="index.html">About me</a></li>
+        <li><a href="index.html">About</a></li>
         <li><a href="portfolio.html">Graphics</a></li>
         <li><a href="resume.html">Resume</a></li>
     </ul>
