--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <div id="pictextholder">
 
-  <img class="me" src="images/me-01.jpg" alt="Annie Jennemann holding six mini gourds." />
+  <img class="me" src="images/me-01.jpg" alt="Annie Jennemann smiling at the camera while holding six mini gourds." />
 
   <div class="about">
     <p>Hello! I am a first year graduate student at the University of Missouri School of Journalism emphasizing in data journalism. I am passionate about analyzing data and designing graphics.</p>
