--- a/portfolio.html
+++ b/portfolio.html
@@ -87,14 +87,14 @@
         <p> Tool used: Adobe Illustrator </p>
         <a href="images/marijuana-01.png" download="Jennemann_MedicalMarijuana">Download</a>
 
-    <img class="graphic" src="images/flu-01.png" alt="A map showing four different locations in Boone County to get flu shots. The locations are Columbia/Boone County Public Health and Human Services, MU Health Care, MizzouRec and Truman Veterans' Hospital. The map also says Walgreens, CVS, D&H Drugstore, Kilgore's Medical Pharmacy and Walmart offer" />
+    <img class="graphic" src="images/flu-01.png" alt="A map showing four different locations in Boone County to get flu shots. The locations are Columbia/Boone County Public Health and Human Services, MU Health Care, MizzouRec and Truman Veterans' Hospital. The map also says Walgreens, CVS, D&H Drugstore, Kilgore's Medical Pharmacy and Walmart offer flu shots by appointment or walk-in." />
 
         <p> This is a graphic I created in the fall of 2020 showing different locations in Boone County that people could receive flu shots. </p>
         <p> Tool used: Adobe Illustrator </p>
         <a href="images/flu-01.png" download="Jennemann_FluShots">Download</a>
 
 
-    <img class="graphic" src="images/fall-01.png" alt="An illustration graphic showing different types of leaves in Missouri and what colors they change to in the fall." />
+    <img class="graphic" src="images/fall-01.png" alt="An illustration graphic showing different types of leaves in Missouri and what colors they change to in the fall. The leaves included are from a virginia creeper, sugar maple, sassafras, oak tree and a sumac tree." />
 
         <p> This was one of my first graphics published in the Missourian about the color of leaves changing color. I love working with illustrations and anything relating to nature. This was a really fun, yet informative, graphic. </p>
         <p> Tool used: Adobe Illustrator </p>
