--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
 
   <h2> My work samples </h2>
 
-    <img class="graphic" src="images/census_spread-01.png" alt="A graphic spread showing Boone County 2020 census data. The spread shows an area line chart of Boone County's population over a century where the population in 2020 reached 183,610 people. The spread also shows a bar chart of the top five growing counties in Missouri from 2010 to 2020 where Boone County is the fifth highest growing county, growing 12.89%. The last part of the spread are 8 mini bar charts showing the change in population for people of different races and ethnicities." />
+    <img class="graphic" src="images/census_spread-01.png" alt="A graphic spread showing Boone County 2020 census data. The spread shows an area line chart of Boone County's population over a century where the population in 2020 reached 183,610 people. The spread also shows a bar chart of the top five growing counties in Missouri from 2010 to 2020 where Boone County is the fifth highest growing county, growing 12.89%. The last part of the spread are 8 mini bar charts showing the change in population for people of different races and ethnicities. The data came from the U.S. Census Bureau." />
 
         <p> Most recently, I worked with the other graphics editor at the Missourian to create this spread about 2020 census data in Boone County. </p>
         <p> Tool used: Adobe Illustrator </p>
@@ -81,7 +81,7 @@
         <p> This is an example of data the other graphics editor and I analyzed for a story at the Missourian. We looked at COVID-19 vaccinations and case rates in each Missouri county. The story was about vaccine rollout in rural areas in Missouri. </p>
         <p> Tool used: Tableau Desktop </p>
 
-    <img class="graphic" src="images/marijuana-01.png" alt="A graphic spread of data about medical marijuana and marijuana arrests in Missouri. " />
+    <img class="graphic" src="images/marijuana-01.png" alt="A graphic spread of data about medical marijuana and marijuana arrests in Missouri. The spread includes an area line chart showing marijuana possession arrests from 2010 to 2019 broken down by race, a bar chart of possession arrests by age and sex, a heat map of possession arrests per 100,000 people by state, with Wyoming and South Dakota at the highest arrest rate, and an illustration showing the levels of consequences for possessing different amounts of marijuana. The data came from the FBI and the National Organization for the Reform of Marijuana Laws. " />
 
         <p> This is a spread about marijuana-related arrests in Missouri that I created for my final project in the information graphics class at MU. It is a full-page and was published in the print edition of the Missourian Jan. 2021.</p>
         <p> Tool used: Adobe Illustrator </p>
@@ -94,7 +94,7 @@
         <a href="images/flu-01.png" download="Jennemann_FluShots">Download</a>
 
 
-    <img class="graphic" src="images/fall-01.png" alt="An illustration graphic showing different types of leaves in Missouri and what colors they change to in the fall. The leaves included are from a virginia creeper, sugar maple, sassafras, oak tree and a sumac tree." />
+    <img class="graphic" src="images/fall-01.png" alt="An illustration graphic showing different types of leaves in Missouri and what colors they change to in the fall. The leaves included are from a virginia creeper, sugar maple, sassafras, oak tree and a sumac tree. The data is from the Missouri Department of Conservation." />
 
         <p> This was one of my first graphics published in the Missourian about the color of leaves changing color. I love working with illustrations and anything relating to nature. This was a really fun, yet informative, graphic. </p>
         <p> Tool used: Adobe Illustrator </p>
